# cfengine-promise-rust

./: Cargo.toml  README.md
examples/: directory.rs  git.rs
src/: attribute.rs  executor.rs  header.rs  lib.rs  log.rs  protocol.rs  resource.rs
tests/: main.cf
