[package]
name = "rudder_resource"
version = "0.0.1"
authors = ["Alexis Mousset <alexis.mousset@rudder.io>"]
edition = "2021"
description = "Implementation of a Rudder native resource for CFEngine"
readme = "README.md"
repository = "https://github.com/Normation/cfengine-promise-rust"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
